<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/tv_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign"
        android:fontFamily="@font/noto_sans_kr"
        android:textFontWeight="700"
        android:includeFontPadding="false"
        android:textSize="25sp"
        android:textColor="#333333"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="55dp"
        android:text="@string/name_name"
        android:fontFamily="@font/noto_sans_kr"
        android:textFontWeight="700"
        android:includeFontPadding="false"
        android:textSize="14sp"
        android:textColor="#333333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/id_name"
        android:fontFamily="@font/noto_sans_kr"
        android:textFontWeight="700"
        android:includeFontPadding="false"
        android:textSize="14sp"
        android:textColor="#333333"
        app:layout_constraintStart_toStartOf="@+id/et_name"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <TextView
        android:id="@+id/tv_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/pass_name"
        android:fontFamily="@font/noto_sans_kr"
        android:textFontWeight="700"
        android:includeFontPadding="false"
        android:textSize="14sp"
        android:textColor="#333333"
        app:layout_constraintStart_toStartOf="@+id/et_id"
        app:layout_constraintTop_toBottomOf="@+id/et_id" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingStart="16dp"
        android:paddingBottom="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/noto_sans_kr"
        android:textFontWeight="400"
        android:includeFontPadding="false"
        android:textSize="14sp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:background="@drawable/selector_sample_text"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/et_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingStart="16dp"
        android:paddingBottom="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/noto_sans_kr"
        android:textFontWeight="400"
        android:includeFontPadding="false"
        android:textSize="14sp"
        android:ems="10"
        android:hint="@string/id_hint"
        android:background="@drawable/selector_sample_text"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_id"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingStart="16dp"
        android:paddingBottom="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/noto_sans_kr"
        android:textFontWeight="400"
        android:includeFontPadding="false"
        android:textSize="14sp"
        android:ems="10"
        android:background="@drawable/selector_sample_text"
        android:inputType="textPassword"
        android:hint="@string/pass_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_pass"
        app:layout_constraintTop_toBottomOf="@+id/tv_pass"
        android:autofillHints="no" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:text="@string/sign_complete"
        android:background="@drawable/border_btn"
        android:fontFamily="@font/noto_sans_kr"
        android:textFontWeight="700"
        android:includeFontPadding="false"
        android:textSize="15sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_pass"
        app:layout_constraintStart_toStartOf="@+id/et_pass" />
</androidx.constraintlayout.widget.ConstraintLayout>