<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/iv_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="66dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_github" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/id_name"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/noto_sans_kr"
        android:textFontWeight="700"
        android:includeFontPadding="false"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_github" />

    <TextView
        android:id="@+id/tv_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_name"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/noto_sans_kr"
        android:textFontWeight="700"
        android:includeFontPadding="false"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/et_id"
        app:layout_constraintTop_toBottomOf="@+id/et_id" />

    <EditText
        android:id="@+id/et_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingStart="16dp"
        android:paddingBottom="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/noto_sans_kr"
        android:textFontWeight="400"
        android:includeFontPadding="false"
        android:textSize="14sp"
        android:ems="10"
        android:hint="@string/id_hint"
        android:background="@drawable/selector_sample_text"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_id"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingStart="16dp"
        android:paddingBottom="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/noto_sans_kr"
        android:textFontWeight="400"
        android:includeFontPadding="false"
        android:textSize="14sp"
        android:ems="10"
        android:hint="@string/id_hint"
        android:background="@drawable/selector_sample_text"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_pass"
        app:layout_constraintTop_toBottomOf="@+id/tv_pass"
        android:autofillHints="no" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/border_btn"
        android:fontFamily="@font/noto_sans_kr"
        android:textFontWeight="700"
        android:includeFontPadding="false"
        android:textSize="15sp"
        android:text="@string/login_name"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tv_no_account"
        app:layout_constraintEnd_toEndOf="@+id/et_pass"
        app:layout_constraintStart_toStartOf="@+id/et_pass" />


    <TextView
        android:id="@+id/tv_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginBottom="41dp"
        android:fontFamily="@font/noto_sans_kr"
        android:textFontWeight="400"
        android:includeFontPadding="false"
        android:textSize="12sp"
        android:text="@string/sign_no_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btn_login" />

    <TextView
        android:id="@+id/tv_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign"
        android:layout_marginBottom="41dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/noto_sans_kr"
        android:textFontWeight="700"
        android:includeFontPadding="false"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_no_account" />

</androidx.constraintlayout.widget.ConstraintLayout>